src/snapshots/cargo_vet__tests__builtin-simple-unaudited-extra-regenerate.snap
---
source: src/tests.rs
expression: unaudited
---
[[third-party1]]
version = '10.0.0'
criteria = 'safe-to-deploy'

