src/snapshots/cargo_vet__tests__builtin-simple-unaudited-extra.snap
---
source: src/tests.rs
assertion_line: 2305
expression: stdout
---
Vetting Succeeded (2 fully audited, 1 unaudited)

