src/snapshots/cargo_vet__tests__builtin-simple-unaudited-in-delta.snap
---
source: src/tests.rs
assertion_line: 2330
expression: stdout
---
Vetting Succeeded (3 fully audited)

