src/snapshots/cargo_vet__tests__builtin-simple-unaudited-in-full.snap
---
source: src/tests.rs
assertion_line: 2355
expression: stdout
---
Vetting Succeeded (3 fully audited)

