src/snapshots/cargo_vet__tests__builtin-simple-unaudited-nested-stronger-req-regenerate.snap
---
source: src/tests.rs
expression: unaudited
---
[[third-party1]]
version = '3.0.0'
criteria = 'safe-to-run'

[[transitive-third-party1]]
version = '4.0.0'
criteria = 'safe-to-run'

