src/snapshots/cargo_vet__tests__builtin-simple-unaudited-overbroad-regenerate.snap
---
source: src/tests.rs
expression: unaudited
---
[[dev]]
version = "10.0.0"
criteria = "safe-to-run"

