src/snapshots/cargo_vet__tests__builtin-simple-unaudited-partial-twins-regenerate.snap
---
source: src/tests.rs
expression: unaudited
---
[[third-core]]
version = '10.0.0'
criteria = 'safe-to-deploy'

